Fix layout break caused by loading canvases.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,6 +31,10 @@ a{
   color: rgb(244,67,54);
   font-size: .9em;
 }
+object.md-icon {
+  max-width: 24px;
+  max-height: 24px;
+}
 
 
 /* views:api */
